primitives/runtime-interface/tests/ui/no_method_implementation.stderr
error: Methods need to have an implementation.
 --> $DIR/no_method_implementation.rs:5:2
  |
5 |     fn test();
  |     ^^
